--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,19 @@ label {
   text-align: right;
 }
 
+.output{
+  display: inline-block;
+  margin: auto;
+}
+
+.output textarea{
+  width: 25%;
+  min-width: 300px;
+  height: 25%;
+  min-height: 100px;
+  display: block;
+}
+
 #delayRange{
   width: 20%;
   min-width: 100px;
