--- a/src/App.css
+++ b/src/App.css
@@ -72,8 +72,13 @@
 
 #container{
   position: relative;
+  margin-top: 10px;
   padding-top: 15px;
-  padding-bottom: 15px;
+  margin-bottom: 10px;
+  max-height: 400px;
+  overflow-y: auto;
+  border: solid black 2px;
+  border-radius: 2px;
 }
 
 table{
@@ -96,7 +101,21 @@ tr{
   display: inline-block;
   width: 42%;
   vertical-align: middle;
-  margin: 2%;
+  margin-left: 2%;
+  margin-right: 2%;
+  margin-top: 7px;
+  margin-bottom: 7px;
+}
+
+#historyType > div > input, #machineType> label > input{
+  margin-right: 3px;
+}
+
+#historyType> div, #machineType> label{
+  margin-left: 7px;
+  margin-right: 7px;
+  display: inline-flex;
+  align-items: center;
 }
 
 label {
@@ -106,6 +125,8 @@ label {
 .output{
   display: inline-block;
   margin: auto;
+  margin-top: 7px;
+  margin-bottom: 7px;
 }
 
 .output textarea{
